[Fix Bug] not Pagination, too long name, double click and moving node

--- a/webapp/src/app/tracing-page/tracing-page.component.css
+++ b/webapp/src/app/tracing-page/tracing-page.component.css
@@ -20,7 +20,7 @@
 
 .page {
     width: 100%;
-    height: 80vh;
+    height: 100vh;
     overflow: hidden;
 }
 
